--- a/init-full.tex
+++ b/init-full.tex
@@ -11,6 +11,6 @@ Bidrag till boken tas tacksamt mot men jag kommer bedöma ifall materialet är l
 Och kör radio där ute. Mobilt. Stabilt. Med stil.\\[4em]
 
 Stockholm, \today\\
-\italics{Täpp-Anders Sikvall}
+\textit{Täpp-Anders Sikvall}
 
 \clearpage
