--- a/rhb-print-A4.tex
+++ b/rhb-print-A4.tex
@@ -5,8 +5,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[swedish]{babel}
-\usepackage[hidelinks]{hyperref}
+\usepackage[colorlinks,linkcolor=black,urlcolor=blue]{hyperref}
 \usepackage{enumitem}
+\usepackage{multirow}
 \usepackage{amsmath}
 %\usepackage{wasysym}
 \usepackage{tabularx}
