--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -64,7 +64,7 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 
 \subsubsection{Jakt och jordbruksfrekvenser 155\,MHz}
 
-Observera att kanalnumren som är traditionella och frekvenserna inte kommer helt i ordning. Vid svenskt territorialvatten samt inre svenskt vatten skall \textbf{inte frekvenserna markerade med * användas}.
+Observera att kanalnumren som är traditionella och frekvenserna inte kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har särskilda restriktioner på svenskt innanvatten och territorialvatten.
 
 \begin{tabular}{rlrl}
 	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde}            \\ \hline
@@ -74,7 +74,7 @@ Observera att kanalnumren som är traditionella och frekvenserna inte kommer hel
 	          155,525 & Jakt K4 VHF-M L2   &             5 W & Jakt, Jordbruk, Skogsbruk Marin$^M$  \\
 	          156,000 & Jakt K5            &             5 W & Jakt, PMR, Friluftskanal$^P$          \\
 	          155,400 & Jakt K6            &             5 W & Jakt, Jordbruk, Skogsbruk$^R$         \\
-	          155,450 & Jakt K7*           &             5 W & Jakt, Jordbruk, Skogsbruk$^R$
+	          155,450 & Jakt K7           &             5 W & Jakt, Jordbruk, Skogsbruk$^R$
 \end{tabular}
 
 \footnotesize
@@ -98,7 +98,7 @@ Endast smalbandig modulation med FM-deviation max 2.5 kHz skall användas för a
 \begin{longtable}{rlrl}
 	 \textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline
 	\endhead
-446,00625 & PMR446 K1          &          500 mW & PMR$^N$                    \\
+446,00625 & PMR446 K1          &          500 mW & PMR                    \\
 	         446,01875 & PMR446 K2          &          500 mW & PMR / DPMR                 \\
 	         446,03125 & PMR446 K3          &          500 mW & PMR / DPMR                 \\
 	         446,04375 & PMR446 K4          &          500 mW & PMR / DPMR                 \\
@@ -182,7 +182,7 @@ I tabellen listas de kanaler som gäller i svenska farvatten. Andra länder kan 
 Anropskanal och nödkanal är kanal 16.
 
 Vid duplextrafik är skiftet -4,6\,MHz.
-
+\clearpage
 \subsubsection{Kanalnummer och frekvens maritima kanaler}
 
 \begin{longtable}{rrr|rrr}
@@ -278,6 +278,8 @@ Grimeton    & 22 & 35 & Halmstad   & 62 & 52 \\
 Helsingborg & 24 & 28 & Malmö      & 27 & 25 \\
 \end{longtable}
 
+\clearpage
+
 \textbf{Insjöarna}
 
 \begin{longtable}{lrr|lrr}
@@ -293,7 +295,7 @@ Motala    & 26 & 47 &             &    &    \\
 
 \subsection{Frekvenser amatörradio VHF--UHF}
 
-I denna skrift försöker vi omfatta alla VHF och UHF-band vilket inkluderar 6\,m-bandet, 2\,m-bandet, 70\,cm-bandet och 23\,cm-bandet.
+I denna skrift försöker vi omfatta de viktigaste VHF och UHF-banden för amatörradio vilket inkluderar 6\,m-bandet, 2\,m-bandet, 70\,cm-bandet och 23\,cm-bandet.
 
 \subsubsection{Kanalnumrering VHF/UHF}
 
@@ -321,7 +323,7 @@ Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det ka
 \item I 70\,cm-bandet är inga kanaler definierade i intervallet 432.000--433.000\,MHz. Observera att startfrekvensen är utanför 70\,cm bandplanen i IARU region 1.
 \end{itemize}
 
-OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt information.
+\textit{OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt information.}
 
 \clearpage
 \subsubsection{FM-kanaler 6m-bandet}
@@ -454,7 +456,6 @@ X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5\,kHz
 
 RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$\,MHz och $144,025 \cdot 3 = 432,075$\,MHz varför man till och med hade bredare kanalraster de-facto.
 
-\clearpage
 
 \subsection{Scouters frekvenser, JOTA}
 
