--- a/body.tex
+++ b/body.tex
@@ -1,36 +1,7 @@
 \section{Signaler och anrop}
-\subsection{Svenska signaler}
+\subsection{Landsprefix}
 
-Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige förljande signalserier: 7SA--7SZ samt 8SA--8SZ och vidare de mer kända SAA--SMZ. Dessa har används till varierande ändamål, exempelvis har flyget signaler i serien SE-AAA--ZZZ. Polisen har tidigare använt signaler i serien SHA plus fyra siffror, detta är nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten använde SDA med fyra siffror. Signaler som 7SA + 4 siffror används för mindre yrkesbåtar SC + 4 siffror för fritidsbåtar.
-
-Amatörradion använder ett antal signaler, de viktigaste är:
-
-\begin{tabular}{ll}
-	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i serien) \\
-	SA & Amatörradiosignal tilldelad av SSA, ESA eller FRO                     \\
-	SK & Klubbsignaler (som regel tvåställiga efter distriktsiffran)           \\
-	SL & Militära signaler (som regel tvåställiga efter distriktsiffran)
-\end{tabular}
-
-Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan 2-ställiga eller 3-ställiga bokstavskombinationer som är den personliga signalen. Exempel är SM0UEI som är min egen signal, distriktsiffran är 0 dvs hemmavarande i Stockholms län. Ett annat exempel kan vara SK5JV tidigare Fagersta amatörradioklubb.
-
-Repeatrar som tillhör klubbar får ofta signal efter klubben med tillägg /R för repeater.
-
-Det finns numera även ett stort antal signaler som är tillfälliga eller knutna till särskilda event, exempelvis scoutverksamhet som ibland sänder amatörradio och särskilda forskningsfartyg, flyg- och rymdfart mm.
-
-Som suffix används följande:
-
-\begin{tabular}{ll}
-	/M  & Mobil (rörlig) sändaramatör, även portabel \\
-	/MM & Mobil till sjöss (mobil maritime)          \\
-	/AM & Mobil i luften (aeromobile)                \\
-	/PM & Mobil portabel (ej officiellt suffix)\\
-	/R  & Repeaterstation
-\end{tabular}
-
-\subsection{Utländska signaler}
-
-Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla DXCC-listan för mer information.
+Här är inte alla länder med utan de vanligaste som körs från Sverige.
 
 \begin{center}
 \begin{longtable}{cl|cl}
@@ -75,6 +46,35 @@ Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler u
 \end{longtable}
 \end{center}
 
+\subsection{Svenska signaler}
+
+Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige förljande signalserier: 7SA--7SZ samt 8SA--8SZ och vidare de mer kända SAA--SMZ. Dessa har används till varierande ändamål, exempelvis har flyget signaler i serien SE-AAA--ZZZ. Polisen har tidigare använt signaler i serien SHA plus fyra siffror, detta är nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten använde SDA med fyra siffror. Signaler som 7SA + 4 siffror används för mindre yrkesbåtar SC + 4 siffror för fritidsbåtar.
+
+Amatörradion använder ett antal signaler, de viktigaste är:
+
+\begin{tabular}{ll}
+	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i serien) \\
+	SA & Amatörradiosignal tilldelad av SSA, ESA eller FRO                     \\
+	SK & Klubbsignaler (som regel tvåställiga efter distriktsiffran)           \\
+	SL & Militära signaler (som regel tvåställiga efter distriktsiffran)
+\end{tabular}
+
+Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan 2-ställiga eller 3-ställiga bokstavskombinationer som är den personliga signalen. Exempel är SM0UEI som är min egen signal, distriktsiffran är 0 dvs hemmavarande i Stockholms län. Ett annat exempel kan vara SK5JV tidigare Fagersta amatörradioklubb.
+
+Repeatrar som tillhör klubbar får ofta signal efter klubben med tillägg /R för repeater.
+
+Det finns numera även ett stort antal signaler som är tillfälliga eller knutna till särskilda event, exempelvis scoutverksamhet som ibland sänder amatörradio och särskilda forskningsfartyg, flyg- och rymdfart mm.
+
+Som suffix används följande:
+
+\begin{tabular}{ll}
+	/M  & Mobil (rörlig) sändaramatör, även portabel \\
+	/MM & Mobil till sjöss (mobil maritime)          \\
+	/AM & Mobil i luften (aeromobile)                \\
+	/PM & Mobil portabel (ej officiellt suffix)\\
+	/R  & Repeaterstation
+\end{tabular}
+
 \subsection{Svenska distrikten}
 
 Sverige delas in i följande distrikt efter sina län:
@@ -101,7 +101,7 @@ I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast e
 \subsection{Bokstaveringsalfabetet (Svenska)}
 
 \begin{center}
-\begin{tabular}{cl|cl|cl }
+\begin{longtable}{cl|cl|cl }
 	A & Adam   & O & Olof    & 1 & Ett        \\
 	B & Bertil & P & Petter  & 2 & Tvåa       \\
 	C & Cesar  & Q & Qvintus & 3 & Trea       \\
@@ -117,13 +117,12 @@ I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast e
 	M & Martin & Å & Åke     & - & Minus      \\
 	N & Niklas & Ä & Ärlig   & + & Plus       \\
 	  &        & Ö & Östen   &   & Mellanslag \\
-\end{tabular}
+\end{longtable}
 \end{center}
-
 
 \subsection{Bokstaveringsalfabetet (Internationella)}
 \begin{center}
-\begin{tabular}{cl|cl|cl}
+\begin{longtable}{cl|cl|cl}
 	A & Alfa     &  P   & Papa       & 0 & Zero    \\
 	B & Bravo    &  Q   & Quebec     & 1 & One     \\
 	C & Charlie  &  R   & Romeo      & 2 & Two     \\
@@ -139,7 +138,7 @@ I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast e
 	M & Mike     & Ä/AE & Alfa-Echo  & - & Minus   \\
 	N & November & Ö/OE & Oscar-Echo & + & Plus    \\
 	O & Oscar    &      &            &   & Space   \\
-\end{tabular}
+\end{longtable}
 \end{center}
 
 \subsection{Q-koder}
@@ -249,7 +248,9 @@ Repeatern är en begränsad resurs. Det är inte okay att lägga beslag på den 
 
 Nödtrafik har alltid prioritet.
 
-\include{qso}
+\input{qso}
+
+\clearpage
 
 \section{Teknik}
 
@@ -423,8 +424,8 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Distrikt 1      &      218.1      &      233.6      &                 &  \\
 	Distrikt 2      &      107.2      &      146.2      &      162.2      &      186.2      \\
 	Distrikt 3      &      127.3      &      141.3      &      250.3      &  \\
-	Värml. / Örebro &      74.4       &      151.4      &                 &  \\
-	Dalarna         &      85.4       &      151.4      &                 &  \\
+	D4 Värml. / Örebro &      74.4       &      151.4      &                 &  \\
+	D4 Dalarna         &      85.4       &      151.4      &                 &  \\
 	Distrikt 5      &      82.5       &      91.5       &      103.5      &      203.5      \\
 	Distrikt 6      &      114.8      &      118,8      &      94.8       &      131.8      \\
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
