--- a/repeatrar-vhf.tex
+++ b/repeatrar-vhf.tex
@@ -36,7 +36,7 @@ SK3SIX  & Östersund          & 50.0700   & QRV & JP73HC & 470 & 7  & 10     & O
 \end{longtable}
 
 \subsubsection{Svenska fyrar SHF}
-\begin{tabular}{rlrllrrrc}
+\begin{longtable}{rlrllrrrc}
 
 \textbf{Signal} & \textbf{QTH}  & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
 \textbf{Masl}   & \textbf{Magl} & \textbf{Effekt}   & \textbf{Ritktning} \\ \hline
@@ -51,7 +51,7 @@ SKØCT/B & Stockholm           & 5760.903   & QRV & JO99JX & 60  & 30  & 80    &
 SK6SHG  & Tjörn Island        & 24048.8830 & QRV & JO57TX & 110 & 8   & 2x1W  & N / S   \\
 SKØEN/B & Väddö               & 10368.8470 & QRV & JO99JX & 60  & 30  & 10000 & 360 deg \\
 
-\end{tabular}
+\end{longtable}
 
 *) SHF-fyrarna får vara med på VHF/UHF-delen till SHF har fått en egen del i listan.
 
