--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -1,4 +1,5 @@
-\begin{landscape}
+%\begin{landscape}
+\newpage
 \section{Frekvenser Amatörradio LF/MF/HF}
 \subsection{Bandplaner LF/MF/HF}
 Alla frekvenser i kHz, bandbredder i Hz.
@@ -143,6 +144,6 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & FM simplex repeater 29\,610                            \\ \hline
 29\,620 & 29\,700 & 6000 & Alla moder & FM Repeater ut RH1--8, 100\,kHz duplex                 \\ \hline
 \end{tabular}
-\end{landscape}
+%\end{landscape}
 
 \clearpage
