--- a/bandplan-vhfuhf.tex
+++ b/bandplan-vhfuhf.tex
@@ -105,4 +105,5 @@
                                   &               &             &                 & 1299.075, 225, 375, 525, och 675 $\pm$75 kHz                 \\ \hline
 	         1299.750         & 1300.000      & 20 kHz      & Alla moder      & 8 st FM/DV 25 kHz kan. 1299.775--1299.975
 \end{tabular}
+\normalsize
 \clearpage
