Lade till PR-radions 27 MHz

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -29,6 +29,8 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 
 \section{Frekvenser HF}
 
+\input{pr-bandet-27mhz.tex}
+
 \subsection{JOTA---Jamboree on the air, scoutfrekvenser}
 
 Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga amtörradioeldsjälar som inte sällan också är scouter. Här kommer en lista på frekvenser som är vanligt förekommande i scoutsammanhang.
