Mindre justering i rubrik

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -109,9 +109,10 @@ F &       &       &       &        & 16 543 & 18 840 & 22 174 & 25 115 \\
 G &       &       &       &        & 16 546 & 18 843 & 22 177 & 25 118 \\
 \end{longtable}
 
+\clearpage
 \subsection{Fyrar}
 
-\subsubsection{IBP---International Beacon Project}
+\subsubsection{IBP -- International Beacon Project}
 
 Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. 
 
