--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -48,14 +48,14 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 Observera att kanalnumren som är traditionella och frekvenserna inte kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har särskilda restriktioner på svenskt innanvatten och territorialvatten.
 
 \begin{tabular}{rlrl}
-	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde}            \\ \hline
-	          155,425 & Jakt K1            &             5 W & Jakt, Jordbruk$^R$                    \\
-	          155,475 & Jakt K2            &             5 W & Jakt, Jordbruk$^R$                    \\
+	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde}           \\ \hline
+	          155,400 & Jakt K6            &             5 W & Jakt, Jordbruk, Skogsbruk$^R$        \\
+	          155,425 & Jakt K1            &             5 W & Jakt, Jordbruk$^R$                   \\
+	          155,450 & Jakt K7            &             5 W & Jakt, Jordbruk, Skogsbruk$^R$        \\
+	          155,475 & Jakt K2            &             5 W & Jakt, Jordbruk$^R$                   \\
 	          155,500 & Jakt K3 VHF-M L1   &             5 W & Jakt, Jordbruk, Skogsbruk, Marin$^M$ \\
 	          155,525 & Jakt K4 VHF-M L2   &             5 W & Jakt, Jordbruk, Skogsbruk Marin$^M$  \\
-	          156,000 & Jakt K5            &             5 W & Jakt, PMR, Friluftskanal$^P$          \\
-	          155,400 & Jakt K6            &             5 W & Jakt, Jordbruk, Skogsbruk$^R$         \\
-	          155,450 & Jakt K7           &             5 W & Jakt, Jordbruk, Skogsbruk$^R$
+	          156,000 & Jakt K5            &             5 W & Jakt, PMR, Friluftskanal$^P$
 \end{tabular}
 
 \footnotesize
