--- a/body.tex
+++ b/body.tex
@@ -250,8 +250,6 @@ Nödtrafik har alltid prioritet.
 
 \input{qso}
 
-\clearpage
-
 \section{Teknik}
 
 \subsection{Effekt i dBW och dBm}
@@ -269,7 +267,7 @@ Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat 1W 
 \end{tabular}
 \end{center}
 
-\subsection{S-värden}
+\subsection{S-värden, signalvärde, S-meter}
 
 Signalstyrkan i amatörradio uttrycks oftast som S-värden. Dessa fås i regel genom nivån på AGC hos mottagaren. Därför ser man sälla utslag vid riktigt låga signaler.
 
