--- a/body.tex
+++ b/body.tex
@@ -255,7 +255,7 @@ Nödtrafik har alltid prioritet.
 \subsection{Effekt i dBW och dBm}
 
 Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat 1W (dBW). Tabell över effekt och decibelwatt nedan:
-\begin{center}
+\begin{table}[h]
 \begin{tabular}{rrr|rrr|rrr}
 	   \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} \\ \hline
 	  1 \textmu W &          -60 &          -30 &        1 W &            0 &           30 &      100 W &           20 &           50 \\
@@ -265,33 +265,36 @@ Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat 1W 
 	        10 mW &          -20 &           10 &       20 W &           13 &           43 &     1.5 kW &           32 &           62 \\
 	       100 mW &          -10 &           20 &       50 W &           17 &           47 &     2.0 kW &           33 &           63
 \end{tabular}
-\end{center}
+\caption{Tabell över effekt och decibelskalor}
+\end{table}
 
 \subsection{S-värden, signalvärde, S-meter}
 
 Signalstyrkan i amatörradio uttrycks oftast som S-värden. Dessa fås i regel genom nivån på AGC hos mottagaren. Därför ser man sälla utslag vid riktigt låga signaler.
 
-Standard kalibrering för S-metern är enligt följande skala:
+Standard kalibrering för S-metern är enligt skalan i tabellen \ref{tab:s-varden}
 
-\begin{center}
-\begin{longtable}{r|rr|rr}
-	     & \multicolumn{2}{c|}{\textbf{$<$ 30 MHz}} & \multicolumn{2}{c}{\textbf{$>$ 30 MHz}} \\ 
-	   \textbf{S} &  \textbf{dBm} &                \textbf{\textmu V} &  \textbf{dBm} &               \textbf{\textmu V} \\ \hline \endhead
-	   1 & -121 &                     0.21 & -141 &                    0.02 \\
-	   2 & -115 &                     0.40 & -135 &                    0.04 \\
-	   3 & -109 &                     0.80 & -129 &                    0.08 \\
-	   4 & -103 &                     1.60 & -123 &                    0.16 \\
-	   5 &  -97 &                     3.20 & -117 &                    0.32 \\
-	   6 &  -91 &                     6.30 & -111 &                    0.63 \\
-	   7 &  -85 &                    12.60 & -105 &                    1.26 \\
-	   8 &  -79 &                    25.00 &  -99 &                    2.50 \\
-	   9 &  -73 &                    50.00 &  -93 &                    5.00 \\
-	9+10 &  -63 &                      160 &  -83 &                      16 \\
-	9+20 &  -53 &                      500 &  -73 &                      50 \\
-	9+30 &  -43 &                     1600 &  -63 &                     160 \\
-	9+40 &  -33 &                     5000 &  -53 &                     500
-\end{longtable}
-\end{center}
+\begin{table}[h]
+\begin{tabular}{r|rr|rr||r|rr|rr}
+      & \multicolumn{2}{c|}{\textbf{$<$ 30 MHz}} &
+  \multicolumn{2}{c}{\textbf{$>$ 30 MHz}}       && \multicolumn{2}{c|}{\textbf{$<$ 30 MHz}} &
+  \multicolumn{2}{c}{\textbf{$>$ 30 MHz}}\\ \textbf{S} & \textbf{dBm}
+  & \textbf{\textmu V} & \textbf{dBm} & \textbf{\textmu V}&   \textbf{S} & \textbf{dBm}
+  & \textbf{\textmu V} & \textbf{dBm} & \textbf{\textmu V} \\\hline
+          
+	   1 & -121 & 0.21  & -141 & 0.02 & 9+10 & -63 & 160  & -83 & 16  \\
+	   2 & -115 & 0.40  & -135 & 0.04 & 9+20 & -53 & 500  & -73 & 50  \\
+	   3 & -109 & 0.80  & -129 & 0.08 & 9+30 & -43 & 1600 & -63 & 160 \\
+	   4 & -103 & 1.60  & -123 & 0.16 & 9+40 & -33 & 5000 & -53 & 500 \\
+	   5 & -97  & 3.20  & -117 & 0.32 &      &     &      &     &     \\
+	   6 & -91  & 6.30  & -111 & 0.63 &      &     &      &     &     \\
+	   7 & -85  & 12.60 & -105 & 1.26 &      &     &      &     &     \\
+	   8 & -79  & 25.00 & -99  & 2.50 &      &     &      &     &     \\
+	   9 & -73  & 50.00 & -93  & 5.00 &      &     &      &     &     \\
+\end{tabular}
+\caption{Tabell över S-värden, effekt och spänning}
+\label{tab:s-varden}
+\end{table}
 
 \subsection{Modulationer}
 
